# Simulation_of_a_calorimeter_cell

./: CMakeLists.txt  README.md  Simulation_of_a_calorimeter_cell.cpp
include/: Detector.hh  EventAction.hh  Geometry.hh  LinkDef.h  MagnetGeometry.hh  MyDict.h  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  ROOTWriter.hh  SteppingAction.hh
scripts_and_macros/: run.mac  run_geant4_with_ext_lib.sh
src/: Detector.cpp  EventAction.cpp  Geometry.cpp  MagnetGeometry.cpp  PrimaryGenerator.cpp  PrimaryGeneratorAction.cpp  ROOTWriter.cpp  SteppingAction.cpp
